@@ -1,3 +1,9 @@
+2003-10-31  Borut Razem <borut.razem@siol.net>
+
+	* support\cpp2\cpplex.c: Fixed _WIN32 problem with CR-CR-LF sequences
+	  when outputting comment blocks (when executed with -C option) and
+	  _asm (SDCPP specific) blocks
+
 2003-10-31 Erik Petrich <epetrich@ivorytower.norman.ok.us>
 	
 	* as/hc08/lkrloc.c (relr): Fixed ihx output, fixed lastAreaIndex warning
